added json parsing test

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     testImplementation 'com.codeborne:pdf-test:1.5.0'
     testImplementation 'com.codeborne:xls-test:1.4.3'
     testImplementation 'com.opencsv:opencsv:5.9'
+    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
 }
 
 test {
